--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bytes": "^3.1.0",
     "chalk": "^4.1.0",
+    "cpu-stat": "^2.0.1",
     "date-fns": "^2.16.1",
     "discord.js": "^12.5.1",
     "enmap": "^5.8.4",
@@ -18,8 +20,10 @@
     "glob": "^7.1.6",
     "https": "^1.0.0",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
+    "os": "^0.1.1",
     "twemoji-parser": "^13.0.0",
     "util": "^0.12.3"
   }
