--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
     "os": "^0.1.1",
+    "puppeteer": "^7.0.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "twemoji-parser": "^13.0.0",
     "util": "^0.12.3"
   }
