--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODAwNTQ5ODIwNDg1NTk5Mjcy.YATwHg.HZcsKZ2gWWjaiQP-IKzp9yfh3yU",
+    "token": "ODA4NDEwNzkyNDIwMDQ4OTc2.YCGJOA.AzrZVjh9-54_z1_JdRMIY27wCaE",
 		"google_api_key":"AIzaSyCbtj-nkM0sTjWXSyyPGoegCBtUQtAikwE",
     "owners": ["774352602678558790", "660552441166823462"],
     "defaultSettings": {
