--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bot-12",
   "version": "1.0.0",
-  "description": "",
   "main": "bot12.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,25 +8,45 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.4.0",
     "bcrypt": "^5.0.0",
     "bytes": "^3.1.0",
     "chalk": "^4.1.0",
     "cpu-stat": "^2.0.1",
     "date-fns": "^2.16.1",
+    "discord-ytdl-core": "^5.0.0",
     "discord.js": "^12.5.1",
     "enmap": "^5.8.4",
     "fs": "0.0.1-security",
     "glob": "^7.1.6",
     "https": "^1.0.0",
+    "humanize-duration": "^3.25.1",
+    "lyrics-finder": "^21.7.0",
+    "mathjs": "^9.2.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
+    "opusscript": "0.0.7",
     "os": "^0.1.1",
     "puppeteer": "^7.0.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
+    "scrape-yt": "^1.4.8",
     "twemoji-parser": "^13.0.0",
-    "util": "^0.12.3"
-  }
+    "util": "^0.12.3",
+    "youtube-sr": "^3.0.4",
+    "ytdl-core": "^4.4.5",
+    "ytpl": "^2.0.5"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Koolwiza/Bot-12.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Koolwiza/Bot-12/issues"
+  },
+  "homepage": "https://github.com/Koolwiza/Bot-12#readme",
+  "description": ""
 }
