Moved commands to general, deleted utility

--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODAwNTQ5ODIwNDg1NTk5Mjcy.YATwHg.NMzBjjDJ2PX_qGWWI60V8sZd4qw",
+    "token": "ODA4NDEwNzkyNDIwMDQ4OTc2.YCGJOA.AzrZVjh9-54_z1_JdRMIY27wCaE",
     "google_api_key": "AIzaSyCbtj-nkM0sTjWXSyyPGoegCBtUQtAikwE",
     "owners": [
         "774352602678558790",
