--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord-ytdl-core": "^5.0.0",
     "discord.js": "^12.5.1",
     "enmap": "^5.8.4",
+    "figlet": "^1.5.0",
     "fs": "0.0.1-security",
     "glob": "^7.1.6",
     "https": "^1.0.0",
