--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "bot12.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall":"node scripts/setup.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -12,19 +11,22 @@
     "@discordjs/opus": "^0.4.0",
     "bcrypt": "^5.0.0",
     "bytes": "^3.1.0",
+    "canvas": "^2.7.0",
+    "canvas-constructor": "^4.1.0",
     "chalk": "^4.1.0",
     "cpu-stat": "^2.0.1",
     "date-fns": "^2.16.1",
     "discord-ytdl-core": "^5.0.0",
     "discord.js": "^12.5.1",
     "enmap": "^5.8.4",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.2.7",
     "figlet": "^1.5.0",
     "fs": "0.0.1-security",
     "glob": "^7.1.6",
     "https": "^1.0.0",
     "humanize-duration": "^3.25.1",
     "lyrics-finder": "^21.7.0",
-    "mathjs": "^9.2.0",
     "moment": "^2.29.1",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
@@ -38,7 +40,7 @@
     "twemoji-parser": "^13.0.0",
     "util": "^0.12.3",
     "youtube-sr": "^3.0.4",
-    "ytdl-core": "^4.4.5",
+    "ytdl-core": "^4.5.0",
     "ytpl": "^2.0.5"
   },
   "devDependencies": {},
