--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "glob": "^7.1.6",
     "https": "^1.0.0",
     "humanize-duration": "^3.25.1",
+    "lodash": "^4.17.21",
     "lyrics-finder": "^21.7.0",
     "moment": "^2.29.1",
     "ms": "^2.1.3",
