--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.4.0",
+    "discord-giveaways": "^4.4.3",
     "bcrypt": "^5.0.0",
     "bytes": "^3.1.0",
     "canvas": "^2.7.0",
